--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -34,22 +34,22 @@
         </div>
         <div class="new_note header_text_block">
             <a {% if user_access_priv == "allow" %} href="{% url 'course_notebook' group_id %}?create=True" {% else %} class="user_not_enrolled" {% endif %}><i class="fa fa-edit header_icon"></i>&nbsp;
-                WRITE A NEW NOTE
+               {% trans "WRITE A NEW NOTE" %} 
             </a>
         </div>
         <div class="pagination prev_button header_text_block">
             
               <a {% if resource_prev_id %} href="{% url 'activity_player_detail' group_id lesson_node.pk resource_prev_id %}" {% else %} class = "disabled"{% endif %}> 
-                  <i class="fa fa-angle-left header_icon"></i> PREV
+                  <i class="fa fa-angle-left header_icon"></i> {% trans "PREV" %}
               </a>
             
         </div>
         <div class="pagination page_count header_text_block">
-            {{resource_index|add:'1'}} OF {{lesson_node.collection_set|length}}
+            {{resource_index|add:'1'}} {% trans "OF" %} {{lesson_node.collection_set|length}}
         </div>
         <div class="pagination page_count header_text_block">
               <a {% if resource_next_id %}  href="{% url 'activity_player_detail' group_id lesson_node.pk resource_next_id %}" {% else %} class = "disabled" {% endif %}>
-                  NEXT <i class="fa fa-angle-right header_icon"></i>
+                  {% trans "NEXT" %} <i class="fa fa-angle-right header_icon"></i>
               </a>
             
         </div>
@@ -82,15 +82,15 @@
               {% get_relation_value node.pk 'has_help' as grel_help %}
               {% get_relation_value node.pk 'has_admin_page' as grel_admin_page %}
                 {% if grel_help.grel_id  %}
-                  <a class="student-page right"> Student Help</a>
+                  <a class="student-page right"> {% trans "Student Help" %}</a>
                 {% endif %}
                 {% if  is_gstaff or user.is_superuser %}
-                  {% if grel_admin_page.grel_id %}<a class="admin-page right"> Teacher's Help</a>{% endif %}
+                  {% if grel_admin_page.grel_id %}<a class="admin-page right"> {% trans "Teacher's Help" %}</a>{% endif %}
                 {% endif  %}
 
               {% get_attribute_value node.pk 'discussion_enable' as node_discussion %}
               {% if node_discussion %}
-              <a class="discuss right"> Discuss</a>
+              <a class="discuss right">{% trans "Discuss" %} </a>
               {% endif %}
               {% comment %}
               <a class="translate right"> Translate</a>
