--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -9,13 +9,13 @@
             <!-- name -->
             <div>
                 <div class="left">
-                <h5>Name</h5>
+                <h5>{% trans "Name" %}</h5>
                 <div class="gray-text"></div>
                 </div>
                 <div class="small-11 medium-11 large-11 columns">
                     <input name="name" type="text" class="orange-button node_name" style="margin-top:11px;margin-left:40px" placeholder="Enter Name"  
                     value="{{node_obj.name|safe}}"/>
-                    <label class="node_name_empty hide" style="color:red">Please enter Name</label>
+                    <label class="node_name_empty hide" style="color:red">{% trans "Please enter Name" %}</label>
 
                 </div>
                 {{source_obj.name}}
@@ -25,7 +25,7 @@
             <!-- content -->
             <div>
                 <div class="left">
-                <h5>Description</h5>
+                <h5>{% trans "Description" %}</h5>
                 </div><br/> 
                 <div class="left" style="width:980px;">
                     {% include "ndf/html_editor.html" with var_name="content" var_placeholder="Enter the content here" var_value=node_obj.content|safe|default_if_none:"" node_id=node_obj.pk ckeditor_toolbar=editor_type %}
@@ -46,7 +46,7 @@
                     </div>
                     <div class="right course_heading_unit">
                          <select name="attribute_{{v.name}}" {{v.widget_attr}}>
-                            <option value=''>Choose {{k}}</option>
+                            <option value=''>{% trans "Choose" %} {{k}}</option>
                             {% for each_opt in v.all_options %}
                                     <option {% if each_opt in v.value %} selected {% endif %}>
                                         {{each_opt}}
@@ -62,7 +62,7 @@
                 <input type="submit" class="small-2 columns right orange-button" id="" value="Save"/>
 
                 {% if cancel_url %}
-                    <a class="small-2 small-push-1 columns text-center orange-button" href="{{cancel_url}}">Cancel</a>
+                    <a class="small-2 small-push-1 columns text-center orange-button" href="{{cancel_url}}">{% trans "Cancel" %}</a>
                 {% endif %}
             </div>
         </form>
