--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/buddy.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/buddy.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% block head %}
   <script src="/static/ndf/bower_components/handlebars/handlebars.js"></script>
 {% endblock head %}
