--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
@@ -1,5 +1,6 @@
 {# lms_dashboard.html lms My Desk screen #}
 {% extends "ndf/gbase.html" %}
+{% load i18n %}
 
 
 {% block title %} My Desk {% endblock%}
