--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -142,10 +142,10 @@
                              Folder Name
                         
                         {% else %}
-                       Unique Asset Name: <h9 style="color: red;">*</h9>
+                       Asset Name: {% endif %}<h9 style="color: red;">*</h9>
                        <input type="text" placeholder="" class="required" id = "asset-name" name="asset_unique_name" value="{% if asset_obj %} {{asset_obj.name}}{% endif %}"/>
 
-                        Display Asset Name:  {% endif %}<h9 style="color: red;">*</h9>
+                        Display Name:  <h9 style="color: red;">*</h9>
                        <input type="text" placeholder="" class="required" id = "asset-disp-name" name="asset_display_name" value="{% if asset_obj %} {{asset_obj.name}}{% endif %}"/>                       
 
 
