--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -47,20 +47,20 @@
             {% if not edit and asset_obj %}
                 {% if asset_obj.created_by == request.user.id or is_gstaff  %}
                     <span data-dropdown="asset-settings-drop" aria-controls="asset-settings-drop" aria-expanded="false" class="large orange-button right">
-                        Actions <i class="fa fa-chevron-down"></i>
+                        {% trans "Actions" %} <i class="fa fa-chevron-down"></i>
                     </span>
                     <ul id="asset-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
-                        <li> <a class="createAsset" data-asset_id='{{asset_obj.pk}}'>Edit</a></li>
-                        <li><a class="edit-metadata">Metadata</a></li>
+                        <li> <a class="createAsset" data-asset_id='{{asset_obj.pk}}'>{% trans "Edit" %}</a></li>
+                        <li><a class="edit-metadata">{% trans "Metadata" %}</a></li>
                         <li>
                         {% if not asset_content_list.grel_id %}
                             <a class="delete-asset">
                             {% if 'raw@material' in asset_obj.tags and is_gstaff and title == "raw_material_detail"  %}
-                                Delete Asset
+                                {% trans "Delete Asset" %}
                             {% elif 'asset@gallery' in asset_obj.tags  %}
-                                Delete Folder
+                                {% trans "Delete Folder" %}
                             {% elif title == 'asset_detail'  %}
-                            Delete Asset
+                            {% trans "Delete Asset" %}
                             {% endif  %}
                             </a>
                         {% endif  %}
@@ -72,13 +72,13 @@
             
             {% if request.user.is_authenticated  %}            
                 {% if 'raw@material' in asset_obj.tags and is_gstaff and title == "raw_material_detail"  %}
-                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File</button>
+                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> {% trans "Add File" %}</button>
                 {% endif %}
                 {% if 'asset@gallery' in asset_obj.tags  %}
-                <button   type="button" class="orange-button add-asset-content right" ><i class="fi-plus"></i> Add File</button>
+                <button   type="button" class="orange-button add-asset-content right" ><i class="fi-plus"></i> {% trans "Add File" %}</button>
                 {% endif %}
                 {% if title == 'asset_detail'  %}
-                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File</button>
+                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> {% trans "Add File" %}</button>
                 {% endif %}
 
             {% endif %}
@@ -113,20 +113,20 @@
                 
                 <h3 class="left overlay-title">&nbsp;
                 {% if not asset_obj %} 
-                    Add a new 
+                    {% trans "Add a new" %} 
                 {% else %} 
-                    Edit 
+                    {% trans "Edit" %} 
                 {% endif %}
                 {% if title == "raw material"   and is_gstaff %}
-                    Resource
+                    {% trans "Resource" %}
                 {% elif title == "gallery"  %}
-                    Folder
+                    {% trans "Folder" %}
                 {% elif title == "asset_list"  %}
-                    Asset
+                    {% trans "Asset" %} 
                 {% endif     %}
                 </h3>
 
-                <button type="button" class="blue-white-button save-asset right" data-asset_id='{{asset_obj.pk}}' style="margin-top: 9px;margin-right: -150px;">Save</button>
+                <button type="button" class="blue-white-button save-asset right" data-asset_id='{{asset_obj.pk}}' style="margin-top: 9px;margin-right: -150px;">{% trans "Save" %}</button>
             {% endif %}
 <div class="row">
     <hr/>
@@ -136,16 +136,16 @@
                 <label>
                     {% if edit or not asset_obj %}
                         {% if title == "raw material"  or 'raw@material' in asset_obj.tags %}
-                            Resource Name
+                            {% trans "Resource Name" %}
                         
                         {% elif title == "gallery"  or 'asset@gallery' in asset_obj.tags %}
-                             Folder Name
+                             {% trans "Folder Name" %}
                         
                         {% else %}
-                       Asset Name: {% endif %}<h9 style="color: red;">*</h9>
+                       {% trans "Asset Name:" %} {% endif %}<h9 style="color: red;">*</h9>
                        <input type="text" placeholder="" class="required" id = "asset-name" name="asset_unique_name" value="{% if asset_obj %} {{asset_obj.name}}{% endif %}"/>
 
-                        Display Name:  <h9 style="color: red;">*</h9>
+                        {% trans "Display Name:" %}  <h9 style="color: red;">*</h9>
                        <input type="text" placeholder="" class="required" id = "asset-disp-name" name="asset_display_name" value="{% if asset_obj %} {{asset_obj.name}}{% endif %}"/>                       
 
 
@@ -161,13 +161,13 @@
             <label>
                 
                     {% if title == "raw material"  or 'raw@material' in asset_obj.tags %}
-                        Resource Description
+                        {% trans "Resource Description" %}
                     
                     {% elif title == "gallery"  or 'asset@gallery' in asset_obj.tags %}
-                         Folder Description
+                         {% trans "Folder Description" %}
                     {% else %}
                     
-                    Asset description {% endif %} <h9 style="color: red;">*</h9>
+                    {% trans "Asset description" %} {% endif %} <h9 style="color: red;">*</h9>
                     <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter Description" id="asset-descid" value=''>{% if asset_obj %} {{asset_obj.content|safe|striptags}}{% endif %}</textarea>
             </label>
             </div>
@@ -177,7 +177,7 @@
         <div class="row">
             <div class="small-12 medium-10 large-10 columns">
                 <label style="text-transform: none!important;">
-                    Select Language
+                    {% trans "Select Language" %}
                 {% get_language_info_list for LANGUAGES as languages %}
                 <select class="asset-lang" name="lan" id="asset_lang" >
                     asset_obj.language.0
@@ -198,7 +198,7 @@
         <div class="row">
             <div class="asset-tags-container small-12 medium-10 large-10 columns">
                 <label>
-                Add tags:
+                {% trans "Add tags:" %}
                 {% include 'ndf/widget_tags.html' with node=asset_obj hide_lbl=True %}
                 </label>
             </div>
@@ -207,7 +207,7 @@
             <div class="asset-tags-container small-12 medium-10 large-10 columns">
                 <label>
                 {% if not "announced_unit" in group_obj.member_of_names_list %}
-                <input type="checkbox" name="is_raw_material" class="is_raw_material" {% if "raw@material" in asset_obj.tags %} checked="checked" {% endif %}> Mark as Raw Material
+                <input type="checkbox" name="is_raw_material" class="is_raw_material" {% if "raw@material" in asset_obj.tags %} checked="checked" {% endif %}> {% trans "Mark as Raw Material" %}
 
                 </label>
                 {% endif %}
@@ -224,7 +224,7 @@
         <div class="name-desc-asset-cont-area hide">
             <div class="row">
                 <div class="small-8 medium-6 large-6 columns">
-                    <label>Enter File Name <h9 style="color: red;">*</h9>
+                    <label>{% trans "Enter File Name" %} <h9 style="color: red;">*</h9>
                         <input type="text" placeholder="Enter File name" class="required" id = "asset_content_name" name="" style="padding-bottom: 10px;margin-bottom: 31px;"/>
                     </label>
                     <form class="dropzone" id ="docPost" enctype="multipart/form-data" method="post" action="{% url 'add_assetcontent' group_id %}" style="margin-left: -13px;width: 429px;" >
@@ -233,10 +233,10 @@
                 </div>
 
                 <div class="small-8 medium-6 large-6 columns">
-                <label>Enter File Description <br/>
+                <label>{% trans "Enter File Description" %} <br/>
                     <textarea rows="6" cols="2" class="small-12 columns" placeholder="Enter File Description" id="asset_content_desc"></textarea>
                 </label>
-                    <button type="button" class="orange-button right" id="upload_asset" onclick="save_form()" style="margin-right: -3px;">Upload</button>
+                    <button type="button" class="orange-button right" id="upload_asset" onclick="save_form()" style="margin-right: -3px;">{% trans "Upload" %}</button>
                 </div>
             </div>
         </div>
@@ -253,7 +253,7 @@
         <div class="row">
             {% if asset_content_list.grel_id and asset_obj.created_by == request.user.id  or is_gstaff and asset_obj and asset_content_list.grel_id  %}
             <div class="row">
-                <button type="button" class="orange-button delete-asset-content right icon-widget" style="margin-right: 53px;" title="Click on the checkbox on the files below to Delete"><i class="fa fa-trash"></i> Delete Files</button>
+                <button type="button" class="orange-button delete-asset-content right icon-widget" style="margin-right: 53px;" title="Click on the checkbox on the files below to Delete"><i class="fa fa-trash"></i> {% trans "Delete Files" %}</button>
             </div>
             {% endif %}
 
