--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_secondary_header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_secondary_header.html
@@ -1,7 +1,7 @@
 {% load i18n %}
-{% load check_is_gstaff from ndf_tags %}
+{% load check_is_gstaff user_groups from ndf_tags %}
 {% check_is_gstaff group_id request.user as is_gstaff %}
-
+{% user_groups request.user.is_superuser request.user.id as user_grp_count %}
 <nav class="top-bar-second" data-topbar role="navigation" id="top-bar-second">
 		<div class="small-12 medium-12 columns expore-type">
 			<!--<div class="toggleButtons">-->
@@ -9,15 +9,18 @@
 
 				<a href="{% url 'explore_courses' %}" class="secondary-header-tabs  {%if title == 'courses'%} active{% endif %}">
 					Courses
-				</a>
-				{% if is_gstaff %}
+				</a> 
+				{% if request.user.is_superuser or user_grp_count.projects > 0  %}
 				<a href="{% url 'explore_groups' %}" class="secondary-header-tabs {%if title == 'groups'%} active{% endif %}">
 					Projects
 				</a>
+				{% endif %}
+				{% if request.user.is_superuser or user_grp_count.drafts > 0  %}
 				<a href="{% url 'explore_drafts' %}" class="secondary-header-tabs {%if title == 'drafts'%} active{% endif %}">
 					Drafts
 				</a>
 				{% endif %}
+
 			</div>
 		</div>
 	</nav>
