--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -18,6 +18,16 @@
                     <label class="node_name_empty hide" style="color:red">Please enter Name</label>
 
                 </div>
+                <br>
+                <div class="left">
+                <h5>Display Name</h5>
+                <div class="gray-text"></div>
+                </div>
+                <div class="small-11 medium-11 large-11 columns">
+                    <input name="altnames" type="text" class="orange-button node_altnames" style="margin-top:11px;margin-left:40px" placeholder="Enter Display Name"  
+                    value="{{node_obj.altnames}}"/>
+
+                </div>
                 {{source_obj.name}}
             </div>
 
