--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -15,27 +15,60 @@
                 </div>
             </div>
 </div>
-            <div class="row">
+                <h3>Insert Tools</h3>
+            
+            <div class="row outer">
                 <br>
-                <div style="width: 70%" class="app_desc">
+                <div  class="inner">
                     <button type="button"  class="right orange-button" id="insert_ost" >Insert Open Story Tool</button>
                 </div>
-                <div style="width: 70%" class="app_desc">
+                <div  class="inner">
                     <button type="button"  class="right orange-button" id="insert_policequad" >Insert PoliceQuad</button>
                 </div>
-                <div style="width: 70%" class="app_desc">
-                    <button type="button"  class="right orange-button" id="insert_runkittyrun" >Insert Run Kitty Run</button>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_runkittyrun" >Insert Run Kitty Run</button>
                 </div>
-                <div style="width: 70%" class="app_desc">
-                    <button type="button"  class="right orange-button" id="insert_turtle" >Insert TurtleJS</button>
+                <div class="inner">
+                    <button type="button"  class="right orange-button " id="insert_turtle" >Insert TurtleJS</button>
                 </div>
                 {%comment%}
-                <div style="width: 90%" class="app_desc">
-                    <button type="button"  class="right orange-button" id="insert_earth_rotation" >Insert Motion of the Earth</button>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_earth_rotation" >Insert Motion of the Earth</button>
                 </div>
                 {% endcomment %}
-                <div style="width: 90%" class="app_desc">
-                    <button type="button"  class="right orange-button" id="insert_physics-video-player" >Insert Physics Video Player</button>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_geogebra_proportional_reasoning" >Geogebra Proportional Reasoning</button>
+                </div>
+            </div>
+            <div class="row outer">
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_physics-video-player" >Insert Physics Video Player</button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1" >Insert FST-en-L1A1 </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2" >Insert FST-en-L1A2 </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3" >Insert FST-en-L1A3 </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4" >Insert FST-en-L1A4 </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_rp_l2a1" >Insert RP-en-L2A1 </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_rp_l2a2" >Insert RP-en-L2A2 </button>
+                </div><div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_rp_l2a3" >Insert RP-en-L2A3 </button>
+                </div><div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_rp_l2a4" >Insert RP-en-L2A4 </button>
+                </div><div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_rp_l2a5" >Insert RP-en-L2A5 </button>
+                </div><div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_rp_l2a6" >Insert RP-en-L2A6 </button>
                 </div>
             </div>
 </div>
