--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -73,7 +73,7 @@
                             <a href="{% url 'course_about' group_id %}" {% if title == 'about' %}class="selected"{% endif %}>Overview</a>
                         </li>
                         <li >
-                            <a href="{% url 'unit_detail' group_id %}" {% if title == 'unit_authoring' %}class="selected"{% endif %}>Lessons</a>
+                            <a href="{% url 'unit_detail' group_id %}" {% if title == 'unit_authoring' %}class="selected"{% endif %}>{{group_object.project_config.tab_name}}</a>
                         </li>
                        <li>
                             <a href="{% url 'course_pages' group_id %}" {% if title == 'course_pages' or title == 'create_course_pages' %}class="selected"{% endif %}>Activities</a>
@@ -146,7 +146,8 @@
                     </div>
                     <div id="unit_authoring_div">
                         {% if title == 'unit_authoring' %}
-                            {% include "ndf/unit_structure.html" %}
+                        {% get_node_hierarchy group_object as node_hierarchy %}
+                            {% include "ndf/section_subsection.html" with unit_structure=node_hierarchy unit_obj=group_object group_id=group_object.pk section_name=group_object.project_config.section_name sub_section_name="Activity"  %}
                         {% endif %}
 
                     </div>
