Language bar commented from header

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -39,6 +39,7 @@
                 <li class=""><a {% if title == 'Help Page'  %} class="active" {% endif %} target="_blank" href="{% url 'help_page_view' help_oid %}"> <i class="fa fa-info-circle"></i> Help </a></li>
                 {% endif %}
                 <ul class="">
+          {% comment %}
           <li class="has-dropdown">
             <a>{% trans "Language" %} &nbsp; | &nbsp; {{request.LANGUAGE_CODE}}</a>
             <ul class="dropdown">
@@ -56,6 +57,7 @@
 
             </ul>
           </li>
+          {% endcomment %}
         </ul>
             {% if user.is_authenticated %}
                 <li class="has-dropdown buddy_margin">
