--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -31,18 +31,18 @@
             {% if activity_node.created_by == request.user.id or is_gstaff %}
             <div class="small-3 columns right">
                 <span data-dropdown="activity-page-settings-drop" aria-controls="activity-page-settings-drop" aria-expanded="false" class="orange-button right">
-                    Actions <i class="fa fa-chevron-down"></i>
+                    {% trans "Actions" %} <i class="fa fa-chevron-down"></i>
                 </span>
                 <ul id="activity-page-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
             
-                <li><a href="{% url 'edit_course_page' group_id activity_node.pk %}">Edit</a></li>
+                <li><a href="{% url 'edit_course_page' group_id activity_node.pk %}">{% trans "Edit" %}</a></li>
                 <li><a title="Edit Content" class="edit_res_unit">{% trans " Edit Content" %}</a></li>
                 <li><a title="Edit Interaction Settings" class="edit-interaction">{% trans "Interaction Settings" %}</a></li>
                 {% if not activity_node.type_of %}
                   <li><a title="add admin page" class="add-admin-page">{% trans "Link Teacher's page" %}</a></li>
                   <li><a title="add help page" class="add-help-page">{% trans "Link Help page" %}</a></li>
                 {% endif %}
-                <li><a href="{% url 'all_translations' group_id activity_node.pk %}" target="_blank">Alternate Language</a></li>
+                <li><a href="{% url 'all_translations' group_id activity_node.pk %}" target="_blank">{% trans "Alternate Language" %}</a></li>
                 
                 </ul>
             </div>
@@ -96,12 +96,12 @@
         <div class="activity-sheet-actions">
             <div class="row">
             {% if all_pages.count %}
-            <button type="button" class="orange-button delete-activity right" title="Click on the checkbox on the files below to Delete"><i class="fa fa-trash"></i> Delete</button>
+            <button type="button" class="orange-button delete-activity right" title="Click on the checkbox on the files below to Delete"><i class="fa fa-trash"></i> {% trans "Delete" %}</button>
             {% endif %}
             {% if user.is_authenticated %}
-            <a class="right orange-button-template" href="{% url 'create_course_page' group_id %}"><i class="fi-plus"></i> Add Activity page</a>
-            <a class="right orange-button-template" href="{% url 'create_course_page_info'  group_id 'Info' %}"><i class="fi-plus"></i> Add Teacher's page</a>
-            <a class="right orange-button-template" href="{% url 'create_course_page_info' group_id 'Info' %}"><i class="fi-plus"></i> Add Help page</a>
+            <a class="right orange-button-template" href="{% url 'create_course_page' group_id %}"><i class="fi-plus"></i> {% trans "Add Activity page" %}</a>
+            <a class="right orange-button-template" href="{% url 'create_course_page_info'  group_id 'Info' %}"><i class="fi-plus"></i> {% trans "Add Teacher's page" %}</a>
+            <a class="right orange-button-template" href="{% url 'create_course_page_info' group_id 'Info' %}"><i class="fi-plus"></i> {% trans "Add Help page" %}</a>
             {% endif %}
 
 
