--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translate_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translate_detail.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% extends "ndf/gbase.html" %}
 {# {% load get_metadata_values get_attribute_value from ndf_tags %} #}
 
@@ -8,7 +9,7 @@
     <div class="small-12 columns  top-bar-secondions_content" id="scstyle">
 	<h1 class="text-center"> {{node.name}}
 		<small>
-			<a href="{% url 'translated' group_id source_node_id node.language.0 node.pk %}"> <i>[EDIT] </i></a>
+			<a href="{% url 'translated' group_id source_node_id node.language.0 node.pk %}"> <i>{% trans "EDIT" %} </i></a>
 		</small>
 	</h1>
 
@@ -16,7 +17,7 @@
 
     {% if other_translations %}
 	    <hr/>
-	    Other Translations:
+	    {% trans "Other Translations:" %}
 	    <br/>
 	    {% for each_node in other_translations %}
 	        {% include "ndf/widget_card.html" with node=each_node url_name=card_url_name url_first_arg=group_id url_second_arg=source_node_id url_third_arg=each_node.language.0 %}
@@ -24,7 +25,7 @@
     {% endif %}
 
     <hr/>
-    Original Resource:
+    {% trans "Original Resource:" %}
     <br/>
     {% include "ndf/widget_card.html" with node=source_node_obj url_name='all_translations' url_first_arg=group_id url_second_arg=source_node_id %}
     </div>
