--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translation_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translation_list.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% extends "ndf/gbase.html" %}
 
 {% block title %} {{title}} {% endblock %}
@@ -11,7 +12,7 @@
         {% include 'ndf/node_ajax_content.html' %}
         <hr/>
         <label>
-        Translations:
+        {% trans "Translations:" %}
             <div>
                 <button href="#" data-dropdown="drop1" aria-controls="drop1" aria-expanded="false" class="orange-button" tiny>Add / Edit &nbsp;<i class="fa fa-chevron-down"></i></button><br/>
             
