--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -13,7 +13,7 @@
             <div class="course_tree">
                 <dl class="accordion course-lessons" data-accordion role="tablist">
                 </dl>
-                <a class="button-hollow-grey add-lesson add-lesson-top-margin" data-reveal-id="add-lesson-reveal">Add Lesson</a>
+                <a class="button-hollow-grey add-lesson add-lesson-top-margin" data-reveal-id="add-lesson-reveal">{% trans "Add Lesson" %}</a>
             </div>
             <!-- END of LEFT PANEL -->
 
@@ -30,7 +30,7 @@
                         <a  class="view-admin-page right orange-button-template" data-current-activity-id="" > View Teacher's page</a>
                         <a  class="view-help-page right orange-button-template" data-current-activity-id="" > View Help page</a>
                         {% endcomment %}
-                        <a style="margin-top:10px!important; margin-right:27px;" class="save_edit_activity right orange-button-template" data-current-activity-id="" > Edit </a>
+                        <a style="margin-top:10px!important; margin-right:27px;" class="save_edit_activity right orange-button-template" data-current-activity-id="" > {% trans "Edit" %} </a>
                     </div>   
                      <!-- commenting following as activities now will be created/edited
                         from activity area -->
@@ -274,10 +274,10 @@ This will not be used because now only existing activities will be added.
     <p id="deleteLessonModalLabel"></p>
     <div class="row">
       <div class="small-3 small-offset-3 columns">
-        <button id="delLessonbtnConfirmYes" class="orange-button">Yes</button>
+        <button id="delLessonbtnConfirmYes" class="orange-button">{% trans "Yes" %}</button>
       </div>
       <div class="small-3 columns end">
-        <button id="delLessonbtnConfirmNo" class="orange-button">No</button>
+        <button id="delLessonbtnConfirmNo" class="orange-button">{% trans "No" %}</button>
       </div>
     </div>
     <a class="close-reveal-modal">&#215;</a>
@@ -288,7 +288,7 @@ This will not be used because now only existing activities will be added.
 
 <!-- overlay/reveal to add lesson -->
 <div id="add-lesson-reveal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-    <h3>Lesson Name</h3>
+    <h3>{% trans "Lesson Name" %}</h3>
     <input type="text" id="lesson-name">
     <select class="lesson-lang" name="lan" id="lesson_lang" style="height:43px;">
                             {% get_language_info_list for LANGUAGES as languages %}
@@ -304,14 +304,14 @@ This will not be used because now only existing activities will be added.
                                 {% endif %}
                             {% endfor %}
                           </select><br/>
-    <button type="button" class="button-hollow-grey save-lesson add-lesson-top-margin" data-node-id=""> Save Lesson </button>
+    <button type="button" class="button-hollow-grey save-lesson add-lesson-top-margin" data-node-id=""> {% trans "Save Lesson" %} </button>
     <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
 <!-- END of overlay/reveal to add lesson -->
 
 
 <div id="select-activity-page" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog" data-lesson-id="">
-    <h3>Choose Activity Page</h3>
+    <h3>{% trans "Choose Activity Page" %}</h3>
     <div id="activity-container"></div>
     <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
