Cms: Activity detail passed value=True for expand content

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="row activity-detail-content">
-            {% include "ndf/node_ajax_content.html" with node=activity_node %}
+            {% include "ndf/node_ajax_content.html" with node=activity_node expand_content=True  no_discussion=True hide_breadcrumbs=True %}
         </div>
         <div id="info-page-area">
                     
