--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
@@ -281,14 +281,14 @@
           <ul class="tabs" data-tab role="tablist">
             <li class="tab-title active" ><a href="#course-notification" role="tab" tabindex="0" aria-selected="true" aria-controls="panel2-1">Notifications</a></li>
 
-            {% if request.user.is_authenticated and not gstaff_access %}
+            {% if request.user.is_authenticated and not gstaff_access and request.user.id in group_obj.author_set %}
               <li class="tab-title" title="Click here to refresh">
                 <a role="tab" href="#analytics-content" class="fetch-analytics" tabindex="1" aria-selected="false" aria-controls="panel2-2" data-id={{request.user.id}}>
                   Progress Report
                 </a>
               </li>
               <input type="hidden" class="is_admin" value="False" />
-            {% elif gstaff_access %}
+            {% elif gstaff_access or request.user.id in group_object.group_admin %}
               <input type="hidden" class="is_admin" value="True" />
               <li class="tab-title" ><a role="tab" href="#analytics-content" tabindex="1" aria-selected="false" class="fetch-group-analytics" aria-controls="panel2-2" data-id={{request.user.id}}>Group Analytics</a></li>
             {% endif %}
