--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
@@ -281,7 +281,8 @@
           <ul class="tabs" data-tab role="tablist">
             <li class="tab-title active" ><a href="#course-notification" role="tab" tabindex="0" aria-selected="true" aria-controls="panel2-1">Notifications</a></li>
 
-            {% if request.user.is_authenticated and not gstaff_access and request.user.id in group_obj.author_set %}
+            {% if request.user.is_authenticated and not gstaff_access %}
+            {# {% if request.user.is_authenticated and not gstaff_access and request.user.id in group_obj.author_set %} #}
               <li class="tab-title" title="Click here to refresh">
                 <a role="tab" href="#analytics-content" class="fetch-analytics" tabindex="1" aria-selected="false" aria-controls="panel2-2" data-id={{request.user.id}}>
                   Progress Report
