Displays image in description in module cards

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
@@ -16,7 +16,7 @@
     <div class="card_summary">
         <div class="card_section">
             <p class="module_brief" title="{{node.content|safe}}">
-                {{node.content|safe|truncatechars:30}}
+                {{node.content|safe}}
             </p>
         </div>
         <div class="card_section">
