--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -19,6 +19,7 @@
 
                 </div>
                 <br>
+                {% if not no_altname %}
                 <div class="left">
                 <h5>Display Name</h5>
                 <div class="gray-text"></div>
@@ -28,6 +29,7 @@
                     value="{{node_obj.altnames}}"/>
 
                 </div>
+                {% endif %}
                 {{source_obj.name}}
             </div>
 
