flag name changed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -19,7 +19,7 @@
 
                 </div>
                 <br>
-                {% if not no_altname %}
+                {% if not no_altnames %}
                 <div class="left">
                 <h5>Display Name</h5>
                 <div class="gray-text"></div>
